[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Controller.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Clock_red.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Clock_blue.png" type="Texture" id=3]
[ext_resource path="res://Audio/Bell.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/Tick.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/Transform3.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/Music/Music_demon.ogg" type="AudioStream" id=7]
[ext_resource path="res://Audio/Music/Music_human.ogg" type="AudioStream" id=8]
[ext_resource path="res://PIXEARG_.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/UI/Healthbar_empty.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/Healthbar_full.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 9 )

[node name="Controller" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
meter_texture_1 = ExtResource( 2 )
meter_texture_2 = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]
layer = 3

[node name="ClockBack" type="TextureRect" parent="UI/CanvasLayer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 275.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 41.0
rect_scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="TextureProgress" parent="UI/CanvasLayer"]
visible = false
margin_left = 277.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 43.0
max_value = 12.0
value = 12.0
rounded = true
texture_progress = ExtResource( 2 )
fill_mode = 4
radial_center_offset = Vector2( 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0

[node name="SoundBell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Reverb"

[node name="SoundTransform" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0

[node name="TimerTransform" type="Timer" parent="."]
wait_time = 12.0

[node name="TimerPostTransform" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 184.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer"]

[node name="MusicHuman" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -14.0

[node name="MusicDemon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -14.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Time" type="Label" parent="CanvasLayer2"]
visible = false
margin_left = 272.0
margin_top = 160.0
margin_right = 312.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "00:0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" type="TextureProgress" parent="CanvasLayer2"]
visible = false
margin_left = 270.0
margin_top = 147.0
margin_right = 291.0
margin_bottom = 152.0
rect_scale = Vector2( 2, 2 )
max_value = 5.0
value = 5.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )
tint_progress = Color( 0, 0.776471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenMusic" type="Tween" parent="."]

[node name="TweenHealthbar" type="Tween" parent="."]
[connection signal="value_changed" from="UI/CanvasLayer/Clock" to="." method="_on_Clock_value_changed"]
[connection signal="timeout" from="TimerTransform" to="." method="_on_TimerTransform_timeout"]
[connection signal="timeout" from="TimerPostTransform" to="." method="_on_TimerPostTransform_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
